testdata/baselines/reference/compiler/unionElementErrorTruncation.errors.txt
unionElementErrorTruncation.ts(26,1): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{ id: "00"; } | { id: "01"; } | { id: "02"; } | { id: "03"; } | { id: "04"; } | { id: "05"; } | { id: "06"; } | { id: "07"; } | { id: "08"; } | { id: "09"; } | { id: "10"; } | { id: "11"; } | { id: "12"; } | { id: "13"; } | { id: "14"; } | { ...; } | { ...; } | { ...; } | { ...; }'.
  No index signature with a parameter of type 'string' was found on type '{ id: "00"; } | { id: "01"; } | { id: "02"; } | { id: "03"; } | { id: "04"; } | { id: "05"; } | { id: "06"; } | { id: "07"; } | { id: "08"; } | { id: "09"; } | { id: "10"; } | { id: "11"; } | { id: "12"; } | { id: "13"; } | { id: "14"; } | { ...; } | { ...; } | { ...; } | { ...; }'.
unionElementErrorTruncation.ts(27,1): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{ id: "00"; } | { id: "01"; } | { id: "02"; } | { id: "03"; } | { id: "04"; } | { id: "05"; } | { id: "06"; } | { id: "07"; } | { id: "08"; } | { id: "09"; } | { id: "10"; } | { id: "11"; } | { id: "12"; } | { id: "13"; } | { id: "14"; } | ... 4 more ... | { ...; }'.
  No index signature with a parameter of type 'string' was found on type '{ id: "00"; } | { id: "01"; } | { id: "02"; } | { id: "03"; } | { id: "04"; } | { id: "05"; } | { id: "06"; } | { id: "07"; } | { id: "08"; } | { id: "09"; } | { id: "10"; } | { id: "11"; } | { id: "12"; } | { id: "13"; } | { id: "14"; } | ... 4 more ... | { ...; }'.


==== unionElementErrorTruncation.ts (2 errors) ====
    declare let s: string;
    declare let o1:
        | { id: "00" }
        | { id: "01" }
        | { id: "02" }
        | { id: "03" }
        | { id: "04" }
        | { id: "05" }
        | { id: "06" }
        | { id: "07" }
        | { id: "08" }
        | { id: "09" }
        | { id: "10" }
        | { id: "11" }
        | { id: "12" }
        | { id: "13" }
        | { id: "14" }
        | { id: "15" }
        | { id: "16" }
        | { id: "17" }
        | { id: "18" };
    declare let o2:
        | typeof o1
        | { id: "19" };
    
    o1[s];
    ~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{ id: "00"; } | { id: "01"; } | { id: "02"; } | { id: "03"; } | { id: "04"; } | { id: "05"; } | { id: "06"; } | { id: "07"; } | { id: "08"; } | { id: "09"; } | { id: "10"; } | { id: "11"; } | { id: "12"; } | { id: "13"; } | { id: "14"; } | { ...; } | { ...; } | { ...; } | { ...; }'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type '{ id: "00"; } | { id: "01"; } | { id: "02"; } | { id: "03"; } | { id: "04"; } | { id: "05"; } | { id: "06"; } | { id: "07"; } | { id: "08"; } | { id: "09"; } | { id: "10"; } | { id: "11"; } | { id: "12"; } | { id: "13"; } | { id: "14"; } | { ...; } | { ...; } | { ...; } | { ...; }'.
    o2[s];
    ~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{ id: "00"; } | { id: "01"; } | { id: "02"; } | { id: "03"; } | { id: "04"; } | { id: "05"; } | { id: "06"; } | { id: "07"; } | { id: "08"; } | { id: "09"; } | { id: "10"; } | { id: "11"; } | { id: "12"; } | { id: "13"; } | { id: "14"; } | ... 4 more ... | { ...; }'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type '{ id: "00"; } | { id: "01"; } | { id: "02"; } | { id: "03"; } | { id: "04"; } | { id: "05"; } | { id: "06"; } | { id: "07"; } | { id: "08"; } | { id: "09"; } | { id: "10"; } | { id: "11"; } | { id: "12"; } | { id: "13"; } | { id: "14"; } | ... 4 more ... | { ...; }'.
    